--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -177,6 +177,7 @@ dotnet_naming_rule.private_fields_underscored.severity = error
 dotnet_naming_rule.async_methods_end_in_async.symbols = any_async_methods
 dotnet_naming_rule.async_methods_end_in_async.style = end_in_async
 dotnet_naming_rule.async_methods_end_in_async.severity = error
+dotnet_style_prefer_collection_expression = when_types_loosely_match:suggestion
 
 ###############################
 # C# Coding Conventions       #
@@ -269,6 +270,7 @@ dotnet_diagnostic.IDE0060.severity = none # Remove unused parameter
 dotnet_diagnostic.IDE0080.severity = none # Remove unnecessary suppression operator
 dotnet_diagnostic.IDE0100.severity = none # Remove unnecessary equality operator
 dotnet_diagnostic.IDE0110.severity = none # Remove unnecessary discards
+csharp_style_prefer_primary_constructors = true:suggestion
 
 
 ###############################
