--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -4,6 +4,8 @@
     <MauiVersion>8.0.6</MauiVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+
     <PackageVersion Include="Azure.AI.FormRecognizer" Version="4.1.0" />
     <PackageVersion Include="Azure.AI.OpenAI" Version="1.0.0-beta.17" />
     <PackageVersion Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.3.0" />
@@ -40,7 +42,13 @@
     <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
     <PackageVersion Include="Microsoft.ML" Version="3.0.0" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-    <PackageVersion Include="Microsoft.SemanticKernel" Version="1.15.0" />
+    <PackageVersion Include="Microsoft.SemanticKernel" Version="1.16.1" />
+    <PackageVersion Include="Microsoft.SemanticKernel.Planners.Handlebars" Version="1.16.1-preview" />
+    <PackageVersion Include="Microsoft.SemanticKernel.Planners.OpenAI" Version="1.16.1-preview" />
+    <PackageVersion Include="Microsoft.SemanticKernel.Plugins.OpenApi" Version="1.16.1-alpha" />
+    <PackageVersion Include="Microsoft.SemanticKernel.Plugins.Web" Version="1.16.1-alpha" />
+    <PackageVersion Include="Microsoft.SemanticKernel.PromptTemplates.Handlebars" Version="1.16.1" />
+
     <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageVersion Include="MudBlazor" Version="6.11.1" />
     <PackageVersion Include="PdfSharpCore" Version="1.3.62" />
@@ -52,5 +60,8 @@
     <PackageVersion Include="xunit" Version="2.6.2" />
     <PackageVersion Include="FluentAssertions" Version="6.8.0" />
     <PackageVersion Include="NSubstitute" Version="5.1.0" />
+    
+    <PackageVersion Include="Microsoft.KernelMemory.Abstractions" Version="0.69.240727.1" />
+    <PackageVersion Include="Microsoft.KernelMemory.Core" Version="0.69.240727.1" />
   </ItemGroup>
 </Project>
