fix style issues

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,6 +1,17 @@
 <Project>
 
   <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>disable</Nullable>
+    <LangVersion>preview</LangVersion>
+  </PropertyGroup>
+	
+  <PropertyGroup>
+    <NoWarn>$(NoWarn);SKEXP0001,SKEXP0010, SKEXP0020, SKEXP0040, SKEXP0050, SKEXP0060, SKEXP0070, SKEXP0100, SKEXP0110, KMEXP00, IDE1006</NoWarn>
+  </PropertyGroup>
+  
+  <PropertyGroup>
     <AzureFormRecognizerVersion>4.1.0</AzureFormRecognizerVersion>
     <AzureIdentityVersion>1.11.4</AzureIdentityVersion>
     <AzureSearchDocumentsVersion>11.5.0-beta.4</AzureSearchDocumentsVersion>
