--- a/src/DocAssistant.Charty.Ai/DocAssistant.Charty.Ai.csproj
+++ b/src/DocAssistant.Charty.Ai/DocAssistant.Charty.Ai.csproj
@@ -18,5 +18,7 @@
     <PackageReference Include="Microsoft.SemanticKernel.PromptTemplates.Handlebars" />
   </ItemGroup>
 
-
+  <PropertyGroup>  
+    <NoWarn>IDE1006</NoWarn>  
+  </PropertyGroup>  
 </Project>
