--- a/src/.editorconfig
+++ b/src/.editorconfig
@@ -184,6 +184,7 @@ dotnet_style_prefer_collection_expression = when_types_loosely_match:suggestion
 ###############################
 [*.cs]
 # var preferences
+dotnet_diagnostic.IDE1006.severity = none  
 csharp_style_var_for_built_in_types = false:none
 csharp_style_var_when_type_is_apparent = false:none
 csharp_style_var_elsewhere = false:none
