--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -4,14 +4,14 @@
     <MauiVersion>8.0.6</MauiVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.8" />
     <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
-
     <PackageVersion Include="Azure.AI.FormRecognizer" Version="4.1.0" />
     <PackageVersion Include="Azure.AI.OpenAI" Version="1.0.0-beta.17" />
-    <PackageVersion Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.3.0" />
-    <PackageVersion Include="Azure.Identity" Version="1.11.4" />
-    <PackageVersion Include="Azure.Search.Documents" Version="11.5.1" />
-    <PackageVersion Include="Azure.Storage.Blobs" Version="12.19.1" />
+    <PackageVersion Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.3.2" />
+    <PackageVersion Include="Azure.Identity" Version="1.13.0-beta.1" />
+    <PackageVersion Include="Azure.Search.Documents" Version="11.6.0" />
+    <PackageVersion Include="Azure.Storage.Blobs" Version="12.22.0-beta.1" />
     <PackageVersion Include="Azure.Storage.Files.Shares" Version="12.17.1" />
     <PackageVersion Include="Azure.Storage.Queues" Version="12.17.1" />
     <PackageVersion Include="Blazor.LocalStorage.WebAssembly" Version="8.0.0" />
@@ -22,7 +22,7 @@
     <PackageVersion Include="CommunityToolkit.Maui" Version="7.0.1" />
     <PackageVersion Include="coverlet.collector" Version="6.0.0" />
     <PackageVersion Include="Markdig" Version="0.33.0" />
-    <PackageVersion Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.22.0-beta3" />
+    <PackageVersion Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.22.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.0" />
@@ -48,7 +48,6 @@
     <PackageVersion Include="Microsoft.SemanticKernel.Plugins.OpenApi" Version="1.16.1-alpha" />
     <PackageVersion Include="Microsoft.SemanticKernel.Plugins.Web" Version="1.16.1-alpha" />
     <PackageVersion Include="Microsoft.SemanticKernel.PromptTemplates.Handlebars" Version="1.16.1" />
-
     <PackageVersion Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageVersion Include="MudBlazor" Version="6.11.1" />
     <PackageVersion Include="PdfSharpCore" Version="1.3.62" />
@@ -60,7 +59,6 @@
     <PackageVersion Include="xunit" Version="2.6.2" />
     <PackageVersion Include="FluentAssertions" Version="6.8.0" />
     <PackageVersion Include="NSubstitute" Version="5.1.0" />
-    
     <PackageVersion Include="Microsoft.KernelMemory.Abstractions" Version="0.69.240727.1" />
     <PackageVersion Include="Microsoft.KernelMemory.Core" Version="0.69.240727.1" />
   </ItemGroup>
