--- a/src/tests/MinimalApi.Tests/MinimalApi.Tests.csproj
+++ b/src/tests/MinimalApi.Tests/MinimalApi.Tests.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
+    <PreserveCompilationContext>true</PreserveCompilationContext>
     <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
