prepare configs and connection

--- a/src/backend/appsettings.json
+++ b/src/backend/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
 
-  "AzureOpenAiChatGptDeployment": "gunvor-gpt-4o",
+  "AzureOpenAiChatGptDeployment": "hack-gpt4o",
 
   "AzureDocumentIntelligenceEndpoint": "https://di-copilottest-swn.cognitiveservices.azure.com/",
 
@@ -19,8 +19,6 @@
   "RagChatGptAiAssistant": {
     "SystemPromptPath": "/Prompts/SystemPrompts/system-rag-chat-gpt.txt"
   },
-
-  "IsAzureServiceHealthCheckEnabled": false,
 
   "AllowedHosts": "*",
 
@@ -34,19 +32,12 @@
 
   "KernelMemory": {
     "Services": {
-      "AzureAIDocIntel": {
-        // "APIKey" or "AzureIdentity".
-        // AzureIdentity: use automatic AAD authentication mechanism. You can test locally
-        //   using the env vars AZURE_TENANT_ID, AZURE_CLIENT_ID, AZURE_CLIENT_SECRET.
-        "Auth": "AzureIdentity",
-        "Endpoint": "https://di-copilottest-swn.cognitiveservices.azure.com/"
-      },
       "AzureAISearch": {
         // "ApiKey" or "AzureIdentity". For other options see <AzureAISearchConfig>.
         // AzureIdentity: use automatic AAD authentication mechanism. You can test locally
         //   using the env vars AZURE_TENANT_ID, AZURE_CLIENT_ID, AZURE_CLIENT_SECRET.
         "Auth": "AzureIdentity",
-        "Endpoint": "https://srch-copilottest-swn.search.windows.net",
+        "Endpoint": "https://hack-rag-search.search.windows.net",
         "UseHybridSearch": true
       },
       "AzureBlobs": {
@@ -56,9 +47,9 @@
         "Auth": "AzureIdentity",
         // Azure Storage account name, required when using AzureIdentity auth
         // Note: you can use an env var 'KernelMemory__Services__AzureBlobs__Account' to set this
-        "Account": "guncopilottestswn",
+        "Account": "hackragstorage",
         // Container where to create directories and upload files
-        "Container": "smemory",
+        "Container": "DocAssistantMemory",
         // Setting used only for country clouds
         "EndpointSuffix": "core.windows.net"
       },
@@ -67,8 +58,8 @@
         // AzureIdentity: use automatic AAD authentication mechanism. You can test locally
         //   using the env vars AZURE_TENANT_ID, AZURE_CLIENT_ID, AZURE_CLIENT_SECRET.
         "Auth": "AzureIdentity",
-        "Endpoint": "https://gunvor-copilot-test.openai.azure.com/",
-        "Deployment": "gunvor-gpt-4o",
+        "Endpoint": "https://hack-rag-openai.openai.azure.com/",
+        "Deployment": "hack-gpt4o",
         // The max number of tokens supported by model deployed
         // See https://learn.microsoft.com/en-us/azure/ai-services/openai/concepts/models
         "MaxTokenTotal": 16384,
@@ -81,8 +72,8 @@
         // AzureIdentity: use automatic AAD authentication mechanism. You can test locally
         //   using the env vars AZURE_TENANT_ID, AZURE_CLIENT_ID, AZURE_CLIENT_SECRET.
         "Auth": "AzureIdentity",
-        "Endpoint": "https://gunvor-copilot-test.openai.azure.com/",
-        "Deployment": "gunvor-ada",
+        "Endpoint": "https://hack-rag-openai.openai.azure.com/",
+        "Deployment": "hack-ada",
         // The max number of tokens supported by model deployed
         // See https://learn.microsoft.com/en-us/azure/ai-services/openai/concepts/models
         "MaxTokenTotal": 8191
