crud operation for examples for improving generated sql result, and teaching model how to create better sql script

--- a/src/DocAssistant.Charty.Ai/Plugins/DatabasePlugin/GenerateSql/config.json
+++ b/src/DocAssistant.Charty.Ai/Plugins/DatabasePlugin/GenerateSql/config.json
@@ -30,6 +30,11 @@
         "name": "schema",
         "description": "DDL database schema",
         "defaultValue": ""
+      },
+      {
+        "name": "examples",
+        "description": "examples of user prompts and sql result",
+        "defaultValue": ""
       }
     ]
   }
