--- a/src/backend/appsettings.json
+++ b/src/backend/appsettings.json
@@ -53,7 +53,7 @@
   "AllowedHosts": "*",
 
   "AzureStorageAccountEndpoint": "https://hackragstorage.blob.core.windows.net",
-  "AzureStorageContainer": "test",
+  "AzureStorageContainer": "ImageStorage",
 
   "KernelMemory": {
     "Services": {
