--- a/src/DocAssistant.Charty.Ai/DocAssistant.Charty.Ai.csproj
+++ b/src/DocAssistant.Charty.Ai/DocAssistant.Charty.Ai.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <None Remove="Plugins\DatabasePlugin\GenerateSql\config.json" />
     <None Remove="Plugins\DatabasePlugin\GenerateSql\skprompt.txt" />
+    <None Remove="Plugins\DatabasePlugin\GenerateInsertScript\config.json" />
+    <None Remove="Plugins\DatabasePlugin\GenerateInsertScript\skprompt.txt" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,6 +18,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Plugins\DatabasePlugin\GenerateSql\skprompt.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Plugins\DatabasePlugin\GenerateInsertScript\config.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Plugins\DatabasePlugin\GenerateInsertScript\skprompt.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
