--- a/src/backend/MinimalApi.csproj
+++ b/src/backend/MinimalApi.csproj
@@ -12,6 +12,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <_WebToolingArtifacts Remove="Properties\PublishProfiles\DocAssistantDeploy.pubxml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Properties\PublishProfiles\DocAssistantDeploy.pubxml.user" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" />
     <PackageReference Include="NLog.Extensions.Logging" />
     <PackageReference Include="NLog.Web.AspNetCore" />
